# ChangeLog for xfce-base/xfce4-panel
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Dec 2008; Christoph Mende <angelos@gentoo.org> xfce4-panel-9999.ebuild:
  Fixed exo dependency

*xfce4-panel-4.5.92 (14 Nov 2008)

  14 Nov 2008; Christoph Mende <angelos@gentoo.org>
  +xfce4-panel-4.5.92.ebuild:
  Xfce-4.6 Beta 2 bump

  10 Nov 2008; Christoph Mende <angelos@gentoo.org> xfce4-panel-9999.ebuild:
  Removed --disable-mcs-plugin

  04 Nov 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
  xfce4-panel-9999.ebuild:
  Removed MCS

  04 Aug 2008; Christoph Mende <angelos@gentoo.org> metadata.xml,
  xfce4-panel-9999.ebuild:
  Added USE=mcs

  02 Dec 2007; Christoph Mende <angelos@gentoo.org> xfce4-panel-9999.ebuild:
  Sync dependencies with the main tree

  11 Nov 2007; Christoph Mende <angelos@gentoo.org> xfce4-panel-9999.ebuild:
  Added exo dependency

  30 Oct 2007; Christoph Mende <angelos@gentoo.org> xfce4-panel-9999.ebuild:
  Removed librsvg dependency

  27 Oct 2007; Christoph Mende <angelos@gentoo.org> xfce4-panel-9999.ebuild:
  Drop mips as we need libwnck

  20 Oct 2007; Christoph Mende <angelos@gentoo.org> xfce4-panel-9999.ebuild:
  Added dependency on libwnck

  29 Sep 2007; Christoph Mende <angelos@gentoo.org> xfce4-panel-9999.ebuild:
  Fixed dodoc

  06 Jun 2007; Christoph Mende <angelos@gentoo.org> ChangeLog:
  Initial ChangeLog
