@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST xfce4-panel-4.5.92.tar.bz2 855522 RMD160 1c5da120a61151ee77e309604b08dc81f527fbb9 SHA1 dcc2aa83bb832ee1091152aae245672393ac4be6 SHA256 fc5ed06c4900445428d309335eb3d4d5bde897ba9882ade293fb1e74bc455543
-EBUILD xfce4-panel-4.5.92.ebuild 696 RMD160 91b03849e7f96e7ed14cabbdcbf7aa0884b783ef SHA1 ab6952e275cfb62ab760f068768dc9655efc9228 SHA256 33b85e3c5091849b1608fdff5e14dd4f954b4481eff8e01907ffc52ae2906b11
-EBUILD xfce4-panel-9999.ebuild 696 RMD160 91b03849e7f96e7ed14cabbdcbf7aa0884b783ef SHA1 ab6952e275cfb62ab760f068768dc9655efc9228 SHA256 33b85e3c5091849b1608fdff5e14dd4f954b4481eff8e01907ffc52ae2906b11
-MISC ChangeLog 1409 RMD160 4144ff31271903449a936bdb21acfa434db75e09 SHA1 dcf6baeb03912c7b5369378a366c7bfb47f1bf86 SHA256 04669ca555b336ece7dc29aca8b74e167e6f29c32efa77afdca18aefd6b5a7bc
+EBUILD xfce4-panel-4.5.92.ebuild 826 RMD160 a435637cda2c5884afc23ae155e09c18196138f5 SHA1 20cb1a50213ed4253bc654be1c4328da03e71aee SHA256 5ed9f4fc28cd1ef8f81c4de680de25a7dfcb833079a537bf57a8501853675d16
+EBUILD xfce4-panel-9999.ebuild 848 RMD160 32678b67fb6470f2dabb130eefea15b0de62e615 SHA1 8466dd6b7c3b787a06604e0b8afbe1e78eb91c9f SHA256 d04a112ab928554bda9219918f9780dab04d592cf8e0104a1a11b5be71cba3e3
+MISC ChangeLog 1532 RMD160 0a2aa8d18fc1019cbfb613d99bf9ca96f8841e47 SHA1 735b32382e6a01ae5c334316de09d36f67130fa7 SHA256 b78f56e9a5a394c3a7a76998da93685d3303bbc44e846221a7e0c8db2b115824
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAklAGEcACgkQKhnDs22gwa9cIgCfW3zrUoVsdNJMY4T1uGY4QypZ
-Pr4An3oYGCZ8xmVs+40tpngwJKzaYcgW
-=J7yJ
+iEYEARECAAYFAklK3TYACgkQKhnDs22gwa8VpACg2k+aNJN5VFuICzxa7EJXSiBc
+9KwAn3loWoiWytlxWPne9oOOX/OeEiwU
+=GUfV
 -----END PGP SIGNATURE-----
