@@ -12,7 +12,7 @@ DESCRIPTION="Panel"
 HOMEPAGE="http://www.xfce.org/projects/xfce4-panel/"
 KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~sparc ~x86 ~x86-fbsd"
 
-IUSE="debug startup-notification"
+IUSE="debug doc startup-notification"
 
 RDEPEND=">=dev-libs/glib-2.8:2
 	x11-libs/cairo
@@ -24,5 +24,14 @@ RDEPEND=">=dev-libs/glib-2.8:2
 	>=xfce-base/libxfcegui4-${XFCE_VERSION}
 	>=xfce-extra/exo-0.3.92
 	startup-notification? ( x11-libs/startup-notification )"
+DEPEND="${RDEPEND}
+	dev-util/intltool
+	doc? ( dev-util/gtk-doc )"
+
+WANT_GTKDOCIZE="yes"
+
+pkg_setup() {
+	XFCE_CONFIG+=" $(use_enable doc gtk-doc)"
+}
 
 DOCS="AUTHORS ChangeLog HACKING NEWS README README.Plugins"
